ilk sayfa eklendi

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
   <!-- ███ GİRİŞ (SPLASH) ███ -->
   <div id="splash">
     <!-- logo.png yerine kendi logonuzu koyabilirsiniz -->
-    <img id="logo" src="logo.png" alt="Logo" />
-    <h1>KAYIP PET</h1>
-    <p>Mahallende kaybolan canları bul</p>
+   <img id="logo" src="../public/logo.png" alt="Logo" />
+    <h1>CAT & DOG</h1>
+    <p>ÇEK, BİLDİR, BULDUR!</p>
   </div>
 
   <!-- ───────────────── UYGULAMA KISMI (hiç değişmedi) ───────────────── -->
   <nav><button id="listBtn" class="ghost">Liste</button></nav>
 
   <section id="actionBar">
-    <button id="btnCreate">İLAN VER</button>
-    <button id="btnBrowse">İNCELE</button>
+    <button id="btnCreate">BİLDİR</button>
+    <button id="btnBrowse">İHBARLAR</button>
   </section>
 
   <button id="locBtn" class="loc-btn" title="Konumum">📍</button>
