Pet Tracker Hatalarını Düzelt

--- a/src/landing.html
+++ b/src/landing.html
@@ -12,12 +12,12 @@
     <h1>KAYIP PET</h1>
 
     <button id="goReport" class="glass-btn">BİLDİR</button>
-    <button id="goAbout"  class="glass-btn hollow">AMAÇ</button>
+    <button id="goAbout" class="glass-btn hollow">AMAÇ</button>
   </div>
 
   <script>
-    document.getElementById('goReport').onclick = () => location.href = 'app.html';
-    document.getElementById('goAbout' ).onclick = () => location.href = 'purpose.html';
+    document.getElementById('goReport').onclick = () => location.href = 'index.html';
+    document.getElementById('goAbout').onclick = () => location.href = 'purpose.html';
   </script>
 </body>
 </html>
